# Telemetry-Logging-System

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
inc/: ConsoleSink.hpp  FileSink.hpp  FileTelemetrySource.hpp  ILogSink.hpp  ITelemetrySource.hpp  LogManager.hpp  LogMessage.hpp  SafeFile.hpp  SafeSocket.hpp  SocketTelemetrySource.hpp
src/: CMakeLists.txt  ConsoleSink.cpp  FileSink.cpp  FileTelemetrySource.cpp  LogManager.cpp  LogMessage.cpp  SafeFile.cpp  SafeSocket.cpp
